<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="369dp"
        android:layout_height="300dp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="49dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="11dp"
            android:text="@string/bonjour"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toStartOf="@+id/buttonDeconnexion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonDeconnexion"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="5dp"
            android:onClick="onClickBtnDeconnexion"
            android:text="@string/d_connexion"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="7dp"
            android:onClick="onClickBtn1"
            android:text="@string/_1"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toStartOf="@+id/button2"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="6dp"
            android:onClick="onClickBtn2"
            android:text="@string/_2"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toStartOf="@+id/button3"
            app:layout_constraintStart_toEndOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="25dp"
            android:onClick="onClickBtn3"
            android:text="@string/_3"
            app:layout_constraintBottom_toBottomOf="@+id/button2"
            app:layout_constraintEnd_toStartOf="@+id/button4"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="@+id/button2"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="5dp"
            android:onClick="onClickBtn4"
            android:text="@string/_4"
            app:layout_constraintBottom_toTopOf="@+id/button8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/buttonDeconnexion" />

        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="49dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="7dp"
            android:onClick="onClickBtn5"
            android:text="@string/_5"
            app:layout_constraintBottom_toTopOf="@+id/button9"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="55dp"
            android:onClick="onClickBtn6"
            android:text="@string/_6"
            app:layout_constraintBottom_toBottomOf="@+id/button0"
            app:layout_constraintEnd_toStartOf="@+id/button7"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintTop_toTopOf="@+id/button" />

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="25dp"
            android:onClick="onClickBtn7"
            android:text="@string/_7"
            app:layout_constraintBottom_toBottomOf="@+id/button6"
            app:layout_constraintEnd_toStartOf="@+id/button8"
            app:layout_constraintStart_toEndOf="@+id/button6"
            app:layout_constraintTop_toTopOf="@+id/button6" />

        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="45dp"
            android:onClick="onClickBtn8"
            android:text="@string/_8"
            app:layout_constraintBottom_toTopOf="@+id/buttonC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="49dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="76dp"
            android:onClick="onClickBtn9"
            android:text="@string/_9"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="25dp"
            android:onClick="onClickBtn0"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="@+id/button9"
            app:layout_constraintEnd_toStartOf="@+id/buttonPoint"
            app:layout_constraintStart_toEndOf="@+id/button9"
            app:layout_constraintTop_toTopOf="@+id/button9" />

        <Button
            android:id="@+id/buttonPoint"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="25dp"
            android:onClick="onClickBtnPoint"
            android:text="@string/point"
            app:layout_constraintBottom_toBottomOf="@+id/button0"
            app:layout_constraintEnd_toStartOf="@+id/buttonC"
            app:layout_constraintStart_toEndOf="@+id/button0"
            app:layout_constraintTop_toTopOf="@+id/button0" />

        <Button
            android:id="@+id/buttonC"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="76dp"
            android:onClick="onClickBtnC"
            android:text="@string/c"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonPoint"
            app:layout_constraintTop_toBottomOf="@+id/button8" />

        <EditText
            android:id="@+id/etxtMontant"
            android:layout_width="318dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/_200"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.538"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="LabelFor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="360dp"
        android:layout_height="112dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">


        <RadioGroup
            android:id="@+id/rdgChoixAction"
            android:layout_width="109dp"
            android:layout_height="87dp"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="16dp"
            android:checkedButton="@id/rdbDepot"
            android:onClick="onClickChoixAction"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/rdbDepot"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/d_p_t" />

            <RadioButton
                android:id="@+id/rdbRetrait"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/retrait" />

            <RadioButton
                android:id="@+id/rdbVirement"
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:text="@string/virement" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rdgChoixCompte"
            android:layout_width="97dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="36dp"
            android:checkedButton="@id/radioButton4"
            android:onClick="onClickChoixCompte"
            app:layout_constraintBottom_toBottomOf="@+id/rdgChoixAction"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rdgChoixAction"
            app:layout_constraintVertical_bias="1.0">

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/ch_que" />

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/pargne" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="370dp"
        android:layout_height="72dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
        app:layout_constraintVertical_bias="0.14">

        <Button
            android:id="@+id/buttonEtatCompte"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:onClick="onClickEtat"
            android:text="@string/etats_des_comptes"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSoumettre"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="232dp"
            android:layout_marginTop="16dp"
            android:onClick="onClickSoumettre"
            android:text="@string/soumettre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>